--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 yolov11cus.pt filter=lfs diff=lfs merge=lfs -text
+runs/detect/train/weights/best.pt filter=lfs diff=lfs merge=lfs -text
+runs/detect/train/weights/last.pt filter=lfs diff=lfs merge=lfs -text
